--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </head>
 <body>
   <div class="profile-header">
-    <a href="index.html">
+    <a href="home1.html">
       <img src="image/888.jpg" alt="Carlo Acutis" class="avatar">
     </a>
     <div class="name" id="animated-name"></div>
