--- a/du_an_tu_thien.html
+++ b/du_an_tu_thien.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="title"><a href="index.html" style="color: inherit; text-decoration: none;">Anh Cutis</a></div>
+        <div class="title"><a href="home1.html" style="color: inherit; text-decoration: none;">Anh Cutis</a></div>
         <div class="coming-soon">COMING<br>SOON</div>
         <div class="date">??.??.????</div>
     </div>
