--- a/lien_he.html
+++ b/lien_he.html
@@ -121,7 +121,7 @@
         </div>
         <div class="right">
             <div class="logo">
-                <a href="index.html" style="text-decoration: none; color: inherit;"><span>Anh Cutis</span></a>
+                <a href="home1.html" style="text-decoration: none; color: inherit;"><span>Anh Cutis</span></a>
             </div>
             <div class="image-box">
                 <img src="image/777.jpg" alt="Contact illustration">
