--- a/home1.html
+++ b/home1.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <header>
-      <div class="logo"><a href="#" style="color: white; text-decoration: none;">Anh Cutis</a></div>
+      <div class="logo"><a href="index.html" style="color: white; text-decoration: none;">Anh Cutis</a></div>
       <nav>
         <a href="du_an_tu_thien.html">DỰ ÁN BÁC ÁI</a>
         <a href="#">ĐỊA ĐIỂM HÀNH HƯƠNG ĐỨC MẸ</a>
